fixed the truncation problem in order details

--- a/packages/p2p/src/components/order-details/order-details.scss
+++ b/packages/p2p/src/components/order-details/order-details.scss
@@ -90,6 +90,9 @@ $card-width: 456px;
             flex-direction: column;
             padding-left: 1.6rem;
         }
+        &-icon {
+            flex-shrink: 0;
+        }
         &-row {
             display: flex;
             flex-direction: row;
@@ -100,6 +103,7 @@ $card-width: 456px;
             flex-direction: column;
             align-items: flex-start;
             margin-left: 2rem;
+            word-break: break-word;
         }
 
         .dc-accordion__item {
